# http_static

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: file_serving.rs  in_memory_serving.rs  main.rs  tls_connection.rs
